--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -422,9 +422,9 @@
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\log\features\metric.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\log\features\rate.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\log\features\timer.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\machine\interpreter.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\math\checksum.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\math\hash.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\script\interpreter.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\array_slice.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\collection.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\data.ipp" />
