--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="..\..\..\..\test\message\header_message.cpp" />
     <ClCompile Include="..\..\..\..\test\message\memory_pool.cpp" />
     <ClCompile Include="..\..\..\..\test\message\merkle_block.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\messages.cpp" />
     <ClCompile Include="..\..\..\..\test\message\pong.cpp" />
     <ClCompile Include="..\..\..\..\test\message\prefilled_transaction.cpp" />
     <ClCompile Include="..\..\..\..\test\message\reject.cpp" />
