--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ install:
     # Export CC/CXX to control gcc version.
     - if [[ $GCC                         ]]; then export CC=gcc-4.8; export CXX=g++-4.8; fi
 
-    # Download and install packages for osx/clang/dynamic.
+    # Download and install packages.
     - if [[ $OSX   && $CLANG && $DYNAMIC ]]; then brew unlink boost; brew install boost; fi
 
 script:
