--- a/Makefile.am
+++ b/Makefile.am
@@ -125,7 +125,7 @@ src_libbitcoin_la_SOURCES = \
     src/message/get_blocks.cpp \
     src/message/get_data.cpp \
     src/message/get_headers.cpp \
-    src/message/header_message.cpp \
+    src/message/header.cpp \
     src/message/headers.cpp \
     src/message/heading.cpp \
     src/message/inventory.cpp \
@@ -274,7 +274,7 @@ test_libbitcoin_test_SOURCES = \
     test/message/get_blocks.cpp \
     test/message/get_data.cpp \
     test/message/get_headers.cpp \
-    test/message/header_message.cpp \
+    test/message/header.cpp \
     test/message/headers.cpp \
     test/message/heading.cpp \
     test/message/inventory.cpp \
@@ -483,7 +483,7 @@ include_bitcoin_bitcoin_message_HEADERS = \
     include/bitcoin/bitcoin/message/get_blocks.hpp \
     include/bitcoin/bitcoin/message/get_data.hpp \
     include/bitcoin/bitcoin/message/get_headers.hpp \
-    include/bitcoin/bitcoin/message/header_message.hpp \
+    include/bitcoin/bitcoin/message/header.hpp \
     include/bitcoin/bitcoin/message/headers.hpp \
     include/bitcoin/bitcoin/message/heading.hpp \
     include/bitcoin/bitcoin/message/inventory.hpp \
