Split out and standardize stealth_receiver and stealth_spender.

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="..\..\..\..\test\wallet\hd_private.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\payment_address.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\qrcode.cpp" />
+    <ClCompile Include="..\..\..\..\test\wallet\stealth_receiver.cpp" />
+    <ClCompile Include="..\..\..\..\test\wallet\stealth_sender.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\uri_reader.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\bitcoin_uri.cpp" />
     <ClCompile Include="..\..\..\..\test\wallet\encrypted_keys.cpp" />
