--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj.filters
@@ -324,5 +324,11 @@
     <ClCompile Include="..\..\..\..\test\message\header.cpp">
       <Filter>src\message</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\test\wallet\stealth_sender.cpp">
+      <Filter>src\wallet</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\test\wallet\stealth_receiver.cpp">
+      <Filter>src\wallet</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
