--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -156,7 +156,7 @@
     <ClCompile Include="..\..\..\..\src\message\pong.cpp" />
     <ClCompile Include="..\..\..\..\src\message\prefilled_transaction.cpp" />
     <ClCompile Include="..\..\..\..\src\message\reject.cpp" />
-    <ClCompile Include="..\..\..\..\src\message\send_compact_blocks.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\send_compact.cpp" />
     <ClCompile Include="..\..\..\..\src\message\send_headers.cpp" />
     <ClCompile Include="..\..\..\..\src\message\transaction.cpp">
       <ObjectFileName>$(IntDir)transaction_message.obj</ObjectFileName>
@@ -317,7 +317,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\pong.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\prefilled_transaction.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\reject.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_compact_blocks.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_compact.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_headers.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\transaction.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\version.hpp" />
