Make alert types obsolete (and remove). (reverted from commit f8c6231998ce3b66007527bbac4c33d64b681528)

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -111,6 +111,8 @@
     <ClCompile Include="..\..\..\..\test\math\limits.cpp" />
     <ClCompile Include="..\..\..\..\test\math\stealth.cpp" />
     <ClCompile Include="..\..\..\..\test\message\address.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\alert.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\alert_payload.cpp" />
     <ClCompile Include="..\..\..\..\test\message\block.cpp">
       <ObjectFileName>$(IntDir)block_message.obj</ObjectFileName>
     </ClCompile>
